feat(backend): criar projeto python/fastapi
- implementar api rest com fastapi
- adicionar crud de veículos e marcas
- configurar sqlalchemy 2.0
- adicionar dockerfile e pytest config

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,28 +1,20 @@
-FROM maven:3.9.7-eclipse-temurin-21 AS dependencies
-WORKDIR /app
-COPY pom.xml .
-COPY .mvn/ .mvn/
-COPY mvnw .
-RUN mvn dependency:go-offline -B
+FROM python:3.11-slim
 
-FROM maven:3.9.7-eclipse-temurin-21 AS build
 WORKDIR /app
-COPY --from=dependencies /root/.m2 /root/.m2
-COPY pom.xml .
-COPY .mvn/ .mvn/
-COPY mvnw .
-COPY src ./src
-RUN mvn clean package -DskipTests -B
 
-FROM eclipse-temurin:21-jre-alpine AS runtime
-RUN addgroup -S appgroup && adduser -S appuser -G appgroup
-WORKDIR /app
-COPY --from=build /app/target/*.jar /app/app.jar
-RUN chown -R appuser:appgroup /app
-USER appuser
+RUN apt-get update && apt-get install -y \
+    gcc \
+    default-libmysqlclient-dev \
+    pkg-config \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY requirements.txt .
+
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY . .
+
 EXPOSE 8080
 
-HEALTHCHECK --interval=30s --timeout=3s --start-period=60s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:8080/car-fleet-manager/actuator/health || exit 1
-
-CMD ["java", "-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0", "-jar", "/app/app.jar"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
