--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,10 +40,8 @@ services:
     depends_on:
       car-fleet-manager.mysql:
         condition: service_healthy
-    environment:
-      SPRING_PROFILES_ACTIVE: dev
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8080/car-fleet-manager/actuator/health || exit 1"]
+      test: ["CMD-SHELL", "curl -f $${API_BASE_URL}/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
