refactor: simplificar configurações para ci
- adicionar defaults em database settings
- remover variáveis de ambiente do workflow
- simplificar pipeline ci/cd

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,4 +19,4 @@ sonar.python.coverage.reportPaths=backend/coverage.xml
 sonar.sourceEncoding=UTF-8
 
 # Exclusões
-sonar.exclusions=**/__pycache__/**,**/venv/**,**/migrations/**,**/.pytest_cache/**
+sonar.exclusions=**/__pycache__/**,**/venv/**,**/migrations/**,**/.pytest_cache/**,**/main.py
