--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,12 +10,14 @@ permissions:
   contents: read
 
 jobs:
-  test:
-    name: Testes e Cobertura
+  build:
+    name: Build, Test & Analyze
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python 3.13
         uses: actions/setup-python@v5
@@ -30,30 +32,10 @@ jobs:
 
       - name: Run tests with coverage
         working-directory: ./backend
+        env:
+          CORS_ORIGINS: "http://localhost:3000"
         run: |
           pytest --cov=app --cov-report=xml --cov-report=term-missing -v
-
-      - name: Upload coverage to artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: backend/coverage.xml
-
-  sonarqube:
-    name: SonarQube Analysis
-    runs-on: ubuntu-latest
-    needs: test
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Download coverage report
-        uses: actions/download-artifact@v4
-        with:
-          name: coverage-report
-          path: backend/
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
