fix(env): adicionar cors_origins no example.env

--- a/example.env
+++ b/example.env
@@ -4,7 +4,5 @@ DATABASE_USER=car-fleet-manager
 DATABASE_PASSWORD=car-fleet-manager
 DATABASE_PORT=3306
 
-
-SPRING_PROFILES_ACTIVE=dev
-
-REACT_APP_API_BASE_URL=http://localhost:8080/car-fleet-manager
+CORS_ORIGINS=http://localhost:3000
+API_BASE_URL=http://localhost:8080/car-fleet-manager
